# OpenX

./: README.md  benchmarkfig1.html
AccelerationToMulitcore/03.AffinityOpenMP/: check_affinity.c
AccelerationToMulitcore/2.SIMD/0.vec_sum/: serial.c  std.out
AccelerationToMulitcore/2.SIMD/1.vecAdd_simd/: a.out  out1asm  out2asm  simd.c  simd_avx  vecAdd.f90
Benchmarks/OpenACC_ganga_reduction_collapse/: bind.sh  laplace2d.c  laplace2d_kernels_data_optimized
Benchmarks/OpenACC_kernels_data_optimized/: Makefile  laplace2d.c  laplace2d_kernels_data_optimized  nsys_acc_report_nvtx.qdrep  nvtx.c
Benchmarks/OpenAcc_reduction_collapse/: exacOpenACC_rep1.qdrep  laplace2d_parallel_collapse_data  ncu_laplace2d_parallel_collapse_data_openacc.ncu-rep
Benchmarks/OpenMP_reduction_collapse/: Makefile  laplace2d.c  laplace2d_kernels_data_optimized  nsys_mpImproved_report_nvtx.qdrep  nsys_mpgang_report_nvtx.qdrep
Benchmarks/OpenMP_reduction_collapse_teams_gang/: 04_openmp_improve_teams.qdrep  Makefile  laplace2d.c  laplace2d_OpenMP_optimized  laplace2d_OpenMP_optimized.ncu-rep  laplace2d_OpenMP_optimized1.ncu-rep  laplace2d_OpenMP_optimized2.ncu-rep  laplace2d_OpenMP_optimized3_added_numworker.ncu-rep  laplace2d_OpenMP_optimized3_added_teams_nvtx.ncu-rep  newlapace.ncu-rep  newlapace_trce_nsys.qdrep  nvtx.h
Benchmarks/openmpPerformance/: perfromance.ipynb
patch/: CMakeLists.txt  makefile  note.md  nvhpc.output  offloadPatches.c  patch  patch.c
patch_acc/: CMakeLists.txt  gcc.output  note.md  offloadPatches.c  patch.c
patch_omp/: offloadPatches.c
(+119 files in other folders)
